--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,50 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Playwrite+AU+SA:wght@100..400&display=swap'); */
+@font-face {
+    font-family: 'Playwrite';
+    src: url(../fonts/Playwrite_AU_SA/static/PlaywriteAUSA-Thin.ttf);
+    font-weight: 100;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Playwrite';
+    src: url(../fonts/Playwrite_AU_SA/static/PlaywriteAUSA-ExtraLight.ttf);
+    font-weight: 200;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Playwrite';
+    src: url(../fonts/Playwrite_AU_SA/static/PlaywriteAUSA-Light.ttf);
+    font-weight: 300;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Playwrite';
+    src: url(../fonts/Playwrite_AU_SA/static/PlaywriteAUSA-Regular.ttf);
+    font-weight: 400;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Playwrite';
+    src: url(../fonts/Playwrite_AU_SA/static/PlaywriteAUSA-Thin-Italic.ttf);
+    font-weight: 100;
+}
+@font-face {
+    font-family: 'Playwrite';
+    src: url(../fonts/Playwrite_AU_SA/static/PlaywriteAUSA-ExtraLight-Italic.ttf);
+    font-weight: 200;
+}
+@font-face {
+    font-family: 'Playwrite';
+    src: url(../fonts/Playwrite_AU_SA/static/PlaywriteAUSA-Light-Italic.ttf);
+    font-weight: 300;
+}
+@font-face {
+    font-family: 'Playwrite';
+    src: url(../fonts/Playwrite_AU_SA/static/PlaywriteAUSA-Regular-Italic.ttf);
+    font-weight: 400;
+}
+
+
 body,
 body * {
   margin: 0;
@@ -7,5 +54,13 @@ body * {
 }
 
 body {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Playwrite', cursive;
+  font-weight: 400;
+  font-optical-sizing: auto;
+  font-style: normal;
+ 
 }
+
+
+
+
