--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,9 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Playwrite+AU+SA:wght@100..400&display=swap'); */
 @import '../css/components/header.css';
 @import '../css/components/footer.css';
+@import '../css/components/form-create.css';
+@import '../css/components/list.css';
+@import '../css/components/button.css';
 
 @font-face {
     font-family: 'Playwrite ,cursive';
