--- a/css/components/header.css
+++ b/css/components/header.css
@@ -1,51 +1,58 @@
 .main-header {
     display: flex;
+    width: 100%;
     align-items: center;
     justify-content: space-between;
-    width: 100%;
     gap: 2rem;
     padding: 1rem 2rem;
     position: sticky;
     top: 0;
-    background-color: white;
-    box-shadow: 0 0.2rem 0.4rem #0002;
-    margin-bottom: 1rem;
+    z-index: 5;
+    background-color: #fff;
+    box-shadow: 0 0.2rem 0.4rem #0003;
 
-}
-
-.main-header > .logo {
-   height: 3rem;
-}
-.main-header > .stats {
+  }
+  .main-header > .logo {
+    height: 3rem;
+  }
+  .main-header > .stats {
     display: flex;
     align-items: center;
     gap: 1rem;
-}
-.main-header .detail {
-   display: flex;
-   align-items: baseline;
-   gap: 0.2rem;
- 
-}
-
-.main-header .label {
+    margin-left: auto;
+  }
+  .main-header .detail {
+    display: flex;
+    align-items: baseline;
+    gap: 0.2rem;
+  }
+  .main-header .label {
     display: none;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: 0.8rem;
     text-transform: uppercase;
-}
-.main-header .value {
-    font-family: 'Playwrite, cursive';
-    font-weight:normal;
+  }
+  .main-header .value {
+    font-family: Playwrite, cursive;
+    font-weight: normal;
     font-size: 1rem;
-}
- 
-@media (min-width: 36rem){
-    .main-header .label{
-       display: block;       
- }
-}
-   
-
-
+  }
+  .main-header .btn > .icon + .text {
+    display: none;
+  }
+  
+  @media (min-width: 28rem) {
+    .main-header .btn > .icon + .text {
+      display: inline;
+    }
+  }
+  
+  @media (min-width: 48rem) {
+    .main-header {
+      gap: 3rem;
+    }
+    .main-header .label {
+      display: block;
+    }
+  }
