--- a/css/main.css
+++ b/css/main.css
@@ -6,26 +6,26 @@
 @import '../css/components/button.css';
 
 @font-face {
-    font-family: 'Playwrite ,cursive';
-    src: url(../fonts/Playwrite_AU_SA/static/PlaywriteAUSA-Thin.ttf);
+    font-family: 'Playwrite';
+    src: url('../fonts/Playwrite_AU_SA/static/PlaywriteAUSA-Thin.ttf');
     font-weight: 100;
     font-style: normal;
 }
 @font-face {
-    font-family: 'Playwrite, cursive';
-    src: url(../fonts/Playwrite_AU_SA/static/PlaywriteAUSA-ExtraLight.ttf);
+    font-family: 'Playwrite';
+    src: url('../fonts/Playwrite_AU_SA/static/PlaywriteAUSA-ExtraLight.ttf');
     font-weight: 200;
     font-style: normal;
 }
 @font-face {
-    font-family: 'Playwrite ,cursive';
-    src: url(../fonts/Playwrite_AU_SA/static/PlaywriteAUSA-Light.ttf);
+    font-family: 'Playwrite';
+    src: url('../fonts/Playwrite_AU_SA/static/PlaywriteAUSA-Light.ttf');
     font-weight: 300;
     font-style: normal;
 }
 @font-face {
-    font-family: 'Playwrite ,cursive';
-    src: url(../fonts/Playwrite_AU_SA/static/PlaywriteAUSA-Regular.ttf);
+    font-family: 'Playwrite';
+    src: url('../fonts/Playwrite_AU_SA/static/PlaywriteAUSA-Regular.ttf');
     font-weight: 400;
     font-style: normal;
 }
@@ -41,7 +41,7 @@ body * {
 }
 
 body {
-  font-family: 'Playwrite', cursive;
+  font-family: Playwrite, cursive;
   font-optical-sizing: auto;
   font-style: normal;
 }
